[gd_scene load_steps=7 format=2]

[ext_resource path="res://Dialogues/small_deaths.gd" type="Script" id=1]
[ext_resource path="res://title_screen/Fonts/vt323_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://title_screen/Fonts/vt323_35.tres" type="DynamicFont" id=3]
[ext_resource path="res://samples/musicas/dialog_song.ogg" type="AudioStream" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="death" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Game_Player" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 80.0
margin_right = -120.0
margin_bottom = -80.0

[node name="Dialog" type="Polygon2D" parent="Game_Player"]
color = Color( 0, 0, 0, 1 )
polygon = PoolVector2Array( 6.48024, 290.674, 5.62286, 13.7409, 1032.11, 16.3131, 1029.98, 289.816 )

[node name="Terminal" type="RichTextLabel" parent="Game_Player/Dialog"]
margin_left = 49.0
margin_top = 46.0
margin_right = 988.0
margin_bottom = 262.0
custom_fonts/normal_font = ExtResource( 2 )
custom_colors/default_color = Color( 0, 1, 0.243137, 1 )
bbcode_enabled = true

[node name="Timer" type="Timer" parent="Game_Player/Dialog"]
wait_time = 0.05
autostart = true

[node name="Options" type="Polygon2D" parent="Game_Player"]
position = Vector2( -129.796, -78.9199 )
color = Color( 0, 0, 0, 1 )
offset = Vector2( -10.0667, -43.2201 )
polygon = PoolVector2Array( 144.932, 514.051, 143.982, 667.951, 1177.58, 667.951, 1177.58, 516.159 )

[node name="Button1" type="Button" parent="Game_Player/Options"]
margin_left = 161.0
margin_top = 432.0
margin_right = 639.0
margin_bottom = 636.0
custom_styles/focus = SubResource( 1 )
button_mask = 3
flat = true

[node name="option1" type="RichTextLabel" parent="Game_Player/Options/Button1"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0.521569, 0.0980392, 1 )

[node name="Button2" type="Button" parent="Game_Player/Options"]
visible = false
margin_left = 700.0
margin_top = 433.0
margin_right = 1150.0
margin_bottom = 637.0
custom_styles/focus = SubResource( 2 )
flat = true

[node name="option2" type="RichTextLabel" parent="Game_Player/Options/Button2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/normal_font = ExtResource( 3 )
custom_colors/default_color = Color( 0, 0.521569, 0.0980392, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )

[node name="music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = 10.0
autoplay = true

[connection signal="ready" from="Game_Player/Dialog/Terminal" to="." method="_on_Terminal_ready"]
[connection signal="timeout" from="Game_Player/Dialog/Timer" to="." method="_on_Timer_timeout"]
[connection signal="focus_entered" from="Game_Player/Options/Button1" to="." method="_on_Button1_focus_entered"]
[connection signal="focus_exited" from="Game_Player/Options/Button1" to="." method="_on_Button1_focus_exited"]
[connection signal="mouse_entered" from="Game_Player/Options/Button1" to="." method="_on_Button1_mouse_entered"]
[connection signal="mouse_exited" from="Game_Player/Options/Button1" to="." method="_on_Button1_mouse_exited"]
[connection signal="pressed" from="Game_Player/Options/Button1" to="." method="_on_Button1_pressed"]
[connection signal="gui_input" from="Game_Player/Options/Button1/option1" to="." method="_on_option1_gui_input"]
[connection signal="mouse_entered" from="Game_Player/Options/Button1/option1" to="." method="_on_option1_mouse_entered"]
[connection signal="mouse_exited" from="Game_Player/Options/Button1/option1" to="." method="_on_option1_mouse_exited"]
[connection signal="ready" from="Game_Player/Options/Button1/option1" to="." method="_on_option1_ready"]
[connection signal="focus_entered" from="Game_Player/Options/Button2" to="." method="_on_Button2_focus_entered"]
[connection signal="focus_exited" from="Game_Player/Options/Button2" to="." method="_on_Button2_focus_exited"]
[connection signal="pressed" from="Game_Player/Options/Button2" to="." method="_on_Button2_pressed"]
[connection signal="ready" from="Game_Player/Options/Button2" to="." method="_on_Button2_ready"]
[connection signal="gui_input" from="Game_Player/Options/Button2/option2" to="." method="_on_option2_gui_input"]
[connection signal="mouse_entered" from="Game_Player/Options/Button2/option2" to="." method="_on_option2_mouse_entered"]
[connection signal="mouse_exited" from="Game_Player/Options/Button2/option2" to="." method="_on_option2_mouse_exited"]
[connection signal="ready" from="Game_Player/Options/Button2/option2" to="." method="_on_option2_ready"]
